--- a/env.example
+++ b/env.example
@@ -2,3 +2,6 @@ export HUBOT_HIPCHAT_JID=""
 export HUBOT_HIPCHAT_PASSWORD=""
 export HUBOT_AUTH_ADMIN=true
 export HUBOT_HIPCHAT_ROOMS=All
+export HUBOT_JIRA_URL=""
+export HUBOT_JIRA_USERNAME=""
+export HUBOT_JIRA_PASSWORD=""
