--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
-    "hubot-youtube": "^0.1.2"
+    "hubot-youtube": "^0.1.2",
+    "htmlparser": "^1.7.6",
+    "soupselect": "^0.2.0",
+    "jsdom": "^0.2.14",
+    "underscore": "^1.3.3",
+    "scraper": "^0.0.9",
+    "flip": "^0.1.0"
   },
   "engines": {
     "node": "0.10.x"
