--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsdom": "^0.2.14",
     "underscore": "^1.3.3",
     "scraper": "^0.0.9",
-    "flip": "^0.1.0"
+    "flip": "^0.1.0",
+    "aws2js": "^0.6.12",
+    "moment": "^1.6.2"
   },
   "engines": {
     "node": "0.10.x"
