--- a/env.example
+++ b/env.example
@@ -2,3 +2,6 @@ export HUBOT_HIPCHAT_JID=""
 export HUBOT_HIPCHAT_PASSWORD=""
 export HUBOT_AUTH_ADMIN=true
 export HUBOT_HIPCHAT_ROOMS=All
+export HUBOT_GOOGLE_CSE_ID=
+export HUBOT_GOOGLE_CSE_KEY=
+export HUBOT_GOOGLE_IMAGES_HEAR=yes
