--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "author": "Dave Long <david@cagedata.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "aws2js": "^0.6.12",
+    "flip": "^0.1.0",
+    "htmlparser": "^1.7.6",
     "hubot": "^2.9.3",
+    "hubot-ambush": "0.0.3",
+    "hubot-business-cat": "^1.4.1",
     "hubot-diagnostics": "0.0.1",
+    "hubot-explainshell": "^1.1.0",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
@@ -18,15 +24,14 @@
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
+    "hubot-standup": "^0.1.8",
+    "hubot-standup-alarm": "0.0.7",
     "hubot-youtube": "^0.1.2",
-    "htmlparser": "^1.7.6",
-    "soupselect": "^0.2.0",
     "jsdom": "^0.2.14",
-    "underscore": "^1.3.3",
+    "moment": "^1.6.2",
     "scraper": "^0.0.9",
-    "flip": "^0.1.0",
-    "aws2js": "^0.6.12",
-    "moment": "^1.6.2"
+    "soupselect": "^0.2.0",
+    "underscore": "^1.3.3"
   },
   "engines": {
     "node": "0.10.x"
