--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hubot-youtube": "^0.1.2",
     "jsdom": "^0.2.14",
     "moment": "^1.6.2",
+    "playmusic": "^2.1.1",
     "scraper": "^0.0.9",
     "soupselect": "^0.2.0",
     "underscore": "^1.3.3"
