Add incidents to cagebot

--- a/env.example
+++ b/env.example
@@ -5,3 +5,6 @@ export HUBOT_HIPCHAT_ROOMS=All
 export HUBOT_GOOGLE_CSE_ID=
 export HUBOT_GOOGLE_CSE_KEY=
 export HUBOT_GOOGLE_IMAGES_HEAR=yes
+
+export HUBOT_VICTOR_OPS_KEY=
+export HUBOT_VICTOR_OPS_ID=
