--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "flip": "^0.1.0",
     "htmlparser": "^1.7.6",
     "hubot": "^2.9.3",
+    "hubot-slack": "^3.4.2",
+    "hubot-hipchat": "^2.12.0",
     "hubot-ambush": "0.0.3",
     "hubot-business-cat": "^1.4.1",
     "hubot-diagnostics": "0.0.1",
@@ -17,7 +19,6 @@
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
-    "hubot-hipchat": "^2.12.0",
     "hubot-maps": "0.0.0",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.2",
@@ -32,7 +33,8 @@
     "playmusic": "^2.1.1",
     "scraper": "^0.0.9",
     "soupselect": "^0.2.0",
-    "underscore": "^1.3.3"
+    "underscore": "^1.3.3",
+    "hubot-jira": "^1.0.0"
   },
   "engines": {
     "node": "0.10.x"
