--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "flip": "^0.1.0",
     "htmlparser": "^1.7.6",
     "hubot": "^2.9.3",
-    "hubot-slack": "^3.4.2",
     "hubot-hipchat": "^2.12.0",
     "hubot-ambush": "0.0.3",
     "hubot-business-cat": "^1.4.1",
@@ -33,8 +32,7 @@
     "playmusic": "^2.1.1",
     "scraper": "^0.0.9",
     "soupselect": "^0.2.0",
-    "underscore": "^1.3.3",
-    "hubot-jira": "^1.0.0"
+    "underscore": "^1.3.3"
   },
   "engines": {
     "node": "0.10.x"
