--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "playmusic": "^2.1.1",
     "scraper": "^0.0.9",
     "soupselect": "^0.2.0",
-    "underscore": "^1.3.3",
-    "hubot-jira": "^1.0.0"
+    "underscore": "^1.3.3"
   },
   "engines": {
     "node": "0.10.x"
