--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
-    "hubot-lunch": "^0.1.2",
+    "hubot-lunch": "git+https://github.com/cagedata/hubot-lunch.git",
     "hubot-maps": "0.0.0",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.2",
