--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "author": "Dave Long <david@cagedata.com>",
   "description": "A simple helpful robot for your Company",
-  "script": {
+  "scripts": {
     "start": "hubot"
   },
   "dependencies": {
