Uses torus for secrets

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flip": "^1.0.0",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
+    "hubot-heroku-keepalive": "^1.0.3",
     "hubot-explainshell": "^1.1.0",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
@@ -25,7 +26,8 @@
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.3.4",
     "hubot-standup-alarm": "0.1.0",
-    "hubot-youtube": "^1.0.2"
+    "hubot-youtube": "^1.0.2",
+    "torus-cli": "^0.24.1"
   },
   "engines": {
     "node": "6.11.1"
